# Quartz

./: BUILD_QUARTZ.sh  CMakeLists.txt  GIT_FLUSH_REFLOG.sh  Quartz.pro  README.md
apps/quartz/: CMakeLists.txt
apps/scene2qml/: CMakeLists.txt  exporter.cpp
examples/: CMakeLists.txt
examples/raytrace-cpp/: CMakeLists.txt  main.cpp  raytrace-cpp.qrc
examples/raytrace-qml/: CMakeLists.txt  main.cpp  main.qml  raytrace-qml.qrc
include/Qt3DRaytrace/: qmaterial.h
src/extras/: CMakeLists.txt
src/qml/: CMakeLists.txt
src/qml/quick3draytrace/: CMakeLists.txt
src/qml/quick3draytraceextras/: CMakeLists.txt
src/raytrace/: CMakeLists.txt
src/raytrace/frontend/: qmaterial.cpp
src/raytrace/renderers/vulkan/: CMakeLists.txt  renderer.cpp
src/raytrace/renderers/vulkan/jobs/: uploadtexturejob.cpp
